Fix header elements clipping

--- a/styles.css
+++ b/styles.css
@@ -33,21 +33,36 @@ body::-webkit-scrollbar {
 
 
 header {
+  font-size:1.2em;
   z-index: 1;
   height: 60px;
   position: sticky;
   top: 0;
   display: flex;
   justify-content: space-between;
+  padding: 0px 30px 0px 30px;
+  align-items:center;
+
   background-color: var(--header-background-color);
 }
 
+header > ul {
+  gap:40px;
+}
+
 ul {
+  padding:0px;
+  margin:0px;
   align-self: center;
   display: flex;
   justify-content: space-between;
   gap: 10px;
   list-style: none;
+}
+
+li {
+
+  list-style:none;
 }
 
 a {
